# taxi-manager

./: .dockerignore  .env.example  .gitignore  .load-testing.env.default  Dockerfile  Jenkinsfile  Makefile  README.md  config.alloy  debezium-postgres.json  docker-compose.demo.yaml  docker-compose.dev-local.load-testing.yaml  docker-compose.dev-local.observability.yaml  docker-compose.dev-local.yaml  docker-compose.dev.observability.load-testing.yaml  docker-compose.dev.observability.yaml  docker-compose.dev.yaml  docker-compose.kafka.yaml  docker-compose.notification-service.yaml  docker-compose.yaml  loki-config.yaml  loki.yml  main.py  manage.py  nginx.conf  prometheus.yml  pyproject.toml  start_babel.sh  start_vite.sh  tempo.yaml  uwsgi.ini
.github/workflows/: main-dev.yml  main.yml  observability-cloud.yml
grafana/provisioning/datasources/: prometheus.yaml  pyroscope.yaml  tempo.yaml
kafka/: debezium-postgres.json
kafka/flink/: Dockerfile
kafka/flink/sql/: 001-assignment-manager.sql  002-enterprises.sql  003-vehicles.sql  004-vehicle-models.sql
notification_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
notification_service/accounts/: models.py  services.py
notification_service/accounts/migrations/: 0001_initial.py
notification_service/config/: asgi.py  settings.py  wsgi.py
notification_service/kafka/: services.py
notification_service/notification_context/: apps.py  handlers.py  models.py
notification_service/notification_context/migrations/: 0001_initial.py
notification_service/notifications/: handlers.py  services.py
notification_service/vk_bot/: apps.py  bot_client.py  services.py
performance/: load_test.js  load_test_models_delete.js  load_test_models_read.js  load_test_models_write.js  load_test_rps_ladder_simple.js  load_test_rps_ladder_write_read_delete.js  models_common.js
playwright/tests/: vehicle-form.spec.ts
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: batch_models.rs  batch_models_read.rs  batch_models_write.rs  main.rs
taxi_manager/: asgi.py  settings.py  urls.py
taxi_manager/api_v1/: apps.py  serializers.py  tests.py  urls.py  utils.py  views.py
taxi_manager/api_v1/serializers/: main.py  trip.py
taxi_manager/api_v1/views/: filters.py  main.py  trip.py
taxi_manager/application/: unit_of_work.py
taxi_manager/application/dto/: enterprise_dto.py
taxi_manager/application/enterprise/: commands.py  enterprise_usecase.py  repository.py  results.py  usecase.py
taxi_manager/application/enterprise_manager_assignment/: enterprise_manager_usecase.py  (+4 more)
taxi_manager/demo_data/: apps.py  services.py  tests.py  tracking_generator.py
taxi_manager/enterprise/: admin.py  apps.py  models.py  query_sets.py  tests.py
taxi_manager/exchange/: admin.py  models.py  resources.py  services.py  settings_test.py  tests.py
taxi_manager/frontend/: apps.py  urls.py  views.py
taxi_manager/geo_tracking/: admin.py  apps.py  models.py
taxi_manager/geocoding/: admin.py  models.py
taxi_manager/import_export/: apps.py
taxi_manager/infrastructure/: asgi.py  settings.py  settings_asgi.py  settings_base.py  settings_wsgi.py  urls.py  wsgi.py
taxi_manager/react_frontend/: apps.py  package-lock.json  package.json  urls.py  views.py  vite.config.mjs
taxi_manager/reports/: models.py  pdf.py  services.py  tasks.py  urls.py  views.py
taxi_manager/simply_site/: urls.py  views.py
taxi_manager/time_zones/: admin.py  models.py
taxi_manager/tracking_simulator/: apps.py  tests.py  tracking_generator.py
taxi_manager/users/: apps.py
taxi_manager/vanilla_frontend/: apps.py
taxi_manager/vehicle/: admin.py  models.py  validators.py
varnish/: default.vcl
varnish-exporter/: Dockerfile
(+291 files in other folders)
