[project]
name = "taxi-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.0",
    "django==6.0",
    "django-bootstrap5>=26.2",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-pgwatch>=1.0.0",
    "django-prometheus>=2.5.0",
    "django-silk>=5.5.0",
    "django-tasks-db>=0.12.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "djoser>=2.3.3",
    "faker>=40.4.0",
    "fpdf2>=2.8.7",
    "geopy>=2.4.1",
    "gunicorn>=25.3.0",
    "load-dotenv>=0.1.0",
    "networkx>=3.6.1",
    "opentelemetry-distro>=0.63b1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-asgi==0.63b1",
    "opentelemetry-instrumentation-asyncio==0.63b1",
    "opentelemetry-instrumentation-dbapi==0.63b1",
    "opentelemetry-instrumentation-django==0.63b1",
    "opentelemetry-instrumentation-grpc==0.63b1",
    "opentelemetry-instrumentation-logging==0.63b1",
    "opentelemetry-instrumentation-psycopg==0.63b1",
    "opentelemetry-instrumentation-psycopg2==0.63b1",
    "opentelemetry-instrumentation-pymemcache==0.63b1",
    "opentelemetry-instrumentation-requests==0.63b1",
    "opentelemetry-instrumentation-sqlite3==0.63b1",
    "opentelemetry-instrumentation-threading==0.63b1",
    "opentelemetry-instrumentation-urllib==0.63b1",
    "opentelemetry-instrumentation-urllib3==0.63b1",
    "opentelemetry-instrumentation-wsgi==0.63b1",
    "osmnx>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "pymemcache>=4.0.0",
    "pyroscope-io>=1.0.11",
    "uwsgi>=2.0.31",
    "vk-api>=11.10.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
]
